# Persistent-Monoid-Unification

./: dune-project
_build/: .db  .digest-db  log
_build/default/: pmu.dune-package  pmu.install
_build/default/.ppx/70cbff646e19a03e74e4144563b81fe2/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: glue.ml  lex.ml  nuf.ml  nuf_func.ml  parse.ml  parse.mli  parse.mly  parse__mock.ml.mock  parse__mock.mli.inferred  pmu.cma  pmu.cmxa  pmu.cmxs  pmu.ml-gen  u.ml
_build/default/lib/.merlin-conf/: lib-pmu
_build/default/lib/.pmu.objs/: parse__mock.impl.all-deps  parse__mock.impl.d  pmu__Glue.impl.all-deps  pmu__Glue.impl.d  pmu__Lex.impl.all-deps  pmu__Lex.impl.d  pmu__Nuf.impl.d  pmu__Nuf.intf.d  pmu__Nuf_func.impl.d  pmu__Parse.impl.d  pmu__Parse.intf.d  pmu__U.impl.all-deps  pmu__U.impl.d  pmu__Ulist.impl.all-deps  pmu__Ulist.impl.d
_build/default/lib/.pmu.objs/byte/: pmu.cmi  pmu.cmo  pmu.cmt  pmu__Glue.cmi  pmu__Glue.cmo  pmu__Glue.cmt  pmu__Lex.cmi  pmu__Lex.cmo  pmu__Lex.cmt  pmu__Nuf.cmi  pmu__Nuf.cmo  pmu__Nuf.cmt  pmu__Nuf.cmti  pmu__Nuf_func.cmi  pmu__Nuf_func.cmo  pmu__Nuf_func.cmt  pmu__Parse.cmi  pmu__Parse.cmo  pmu__Parse.cmt  pmu__Parse.cmti  pmu__U.cmi  pmu__U.cmo  pmu__U.cmt  pmu__Ulist.cmi  pmu__Ulist.cmo  pmu__Ulist.cmt
_build/default/lib/.pmu.objs/native/: pmu.cmx  pmu__Glue.cmx  pmu__Lex.cmx  pmu__Nuf.cmx  pmu__Nuf_func.cmx  pmu__Parse.cmx  pmu__U.cmx  pmu__Ulist.cmx
_build/default/test/.merlin-conf/: exe-pmu
_build/install/default/lib/pmu/: META  opam  (+1 more)
lib/: dune  lex.mll  nuf.mli  nuf_func.ml  u.ml  ulist.ml
test/: dune
(+3 files in other folders)
